added two new dummy files

--- a/index.html
+++ b/index.html
@@ -9,34 +9,55 @@
     <title>Bowie State Bank | Login</title>
 </head>
 <body>
+    <!-- Login Form -->
     <div class="box">
         <div class="container">
             <div class="top-header">
                 <span>Have an account?</span>
                 <header>Login</header>
             </div>
-
-            <div class="input-field">
-                <input type="text" class="input" placeholder="Username" required>
-                <i class="bx bx-user"></i>
-            </div>
-            <div class="input-field">
-                <input type="password" class="input" placeholder="Password" required>
-                <i class="bx bx-lock-alt"></i>
-            </div>
-            <div class="input-field">
-                <input type="submit" class="submit" value="Login">
-            </div>
-
-            <div class="bottom">
-                <div class="left">
-                    <input type="checkbox" id="check">
-                    <label for="check"> Remember Me</label>
+            
+            <form>
+                <div class="input-field">
+                    <input type="text" class="input" placeholder="Email" id="email">
+                    <i class="fa fa-user"></i>
                 </div>
-                <div class="right">
-                    <label><a href="#">Forgot password?</a> </label>
+                <div class="input-field">
+                    <input type="password" class="input" placeholder="Password" id="password">
+                    <i class="fa fa-lock"></i>
                 </div>
-            </div>
+                <div class="input-field">
+                    <input type="submit" class="submit" value="Login" onclick="auth(event)"/>
+                </div>
+                <div class="bottom">
+                    <div class="left">
+                        <input type="checkbox" id="check">
+                        <label for="check"> Remember Me</label>
+                    </div>
+                    <div class="right">
+                        <label><a href="#">Forgot password?</a> </label>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
+    <script>
+        function auth(event) {
+            event.preventDefault();
+            var email = document.getElementById("email").value;
+            var password = document.getElementById("password").value;
+        
+            // Check if username and password are correct
+            if (email == "student1@gmail.com" && password == "bowie123") {
+                // Redirect to home.html
+                window.location.href = "home.html?email=" + encodeURIComponent(email);
+                alert("Login Successfully");
+            } 
+            else {
+                alert("Invalid login credentials. Please try again.");
+                return false;
+            }
+        }
+    </script>
 </body>
+</html>
