--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="box">
         <div class="container">
             <div class="top-header">
-                <span>Have an account?</span>
+                <span>Sign Up Here!</span>
                 <header>Login</header>
             </div>
             
