--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <header>Login</header>
             </div>
             
-            <form>
+            <form action="connect.php" method ="post">
                 <div class="input-field">
                     <input type="text" class="input" placeholder="Email" id="email">
                     <i class="fa fa-user"></i>
