--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Contact Us</a></li>
+                    <li class="sign-out"><a href="index.html">Sign Out</a></li>
                 </ul>
             </nav>
         </header>
@@ -25,7 +26,7 @@
                 <p>Start managing your finances with ease</p>
             </div>
         </section>
-        <h2>Welcome, <span id="email-display"></span>!</h2>
+        <h3>Welcome, <span id="email-display"></span>!</h3>
         <div class="dashboard">
             <div class="dashboard-item">
               <h2>Total Deposit:</h2>
