--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
 <body>
     <div class="box">
         <div class="container">
-            <div class="top-header">
-                <span>Sign Up Here!</span>
-                <header>Login</header>
-            </div>
-            
-            <form>
+             <!-- Login Form -->
+             <form id="login-form">
+                <div class="top-header">
+                    <header>Login</header>
+                </div>
                 <div class="input-field">
                     <input type="text" class="input" placeholder="Email" id="email">
                     <i class="fa fa-user"></i>
